# VAPT-Automation-Tool

./: .gitignore  AI_SETUP_GUIDE.md  ARCHITECTURE.md  CI_CD_SETUP.md  DELIVERY_SUMMARY.md  EXECUTION_GUIDE.md  FILE_INDEX.md  FINAL_SUMMARY.md  PROJECT_COMPLETION.md  PROJECT_HANDOFF.md  PROJECT_MANIFEST.md  QUICK_REFERENCE.md  README.md  README_FIXES.md  README_NEW.md  READY_TO_USE.md  TRANSFORMATION.md  __init__.py  cli.py  example_usage.py  examples_config.py  pyproject.toml  report_generator.py  requirements.txt  test_scanner.py
scanner/: __init__.py  ai_selector.py  core.py  mutation_engine.py  payload_database.py  response_analyzer.py
scanner/ai_engine/: anomaly_detector.py
scanner/attack_graph/: __init__.py  graph.py
scanner/crawler/: advanced_crawler.py
scanner/detector/: access_control.py  base.py  command_injection.py  info_disclosure.py  injection.py  lfi.py  misconfiguration.py  security_config.py  ssrf.py  ssti.py  xss.py  xxe.py
scanner/payload_engine/: __init__.py  fuzzer.py  generator.py  waf_detector.py
scanner/reporting/: devsecops.py  reporters.py
scanner/risk_engine/: cvss_engine.py
scanner/utils/: __init__.py  constants.py  http_client.py  logging_util.py  models.py  response_utils.py
tests/: test_ai_analyzer.py  test_ai_selector.py  test_crawler.py  test_mutation_engine.py  test_payload_database.py  test_report_generator.py  test_response_analyzer.py  test_risk_engine.py  test_scanner.py
